--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@
 
 }
 
-.topo{
+.topo {
     position: fixed;
     width: 80%;
     height: 25%;
@@ -19,7 +19,7 @@
     
 }
 
-.itopo{
+.itopo {
     position: relative;
     height: 130px;
     width: 100%;
@@ -36,7 +36,7 @@
 
 }
 
-.cont-int{
+.cont-int {
     position: relative;
     background-color: green;
     height: 130px;
@@ -91,7 +91,7 @@
 
 }
 
-.cont-itens{
+.cont-itens {
     position: relative;
     display: flex;
     height: 400px;
@@ -125,4 +125,42 @@
 
 }
 
+#contato {
+    position: relative;
+    width: 100%;
+    margin: 10px;
+    padding: 5px;
+}
+
+#cont-int-contato {
+    position: relative;
+    background-color: green;
+    height: 500px;
+    margin: 10px;
+    padding: 5px;
+    border-radius: 10px;
+}
+
+#form_contatos {
+    position: relative;
+    width: 500px;
+    margin: auto;
+}
+
+input, textarea {
+    font-family: sans-serif;
+    font-weight: normal;
+    font-size: 13pt;
+    margin: 10px;
+}
+
+label, legend {    
+    font-family: sans-serif;
+    font-weight: normal;
+    font-size: 13pt;
+}
+
+input:hover, textarea:hover {
+    background-color: #dddddd;
+}
 
