--- a/css/styles.css
+++ b/css/styles.css
@@ -91,17 +91,27 @@
 
 }
 
+.itens-sec {
+    position: relative;
+    display: block;
+    flex-direction: row;
+    width: 100%;
+    height: 200px;
+    border: 2px solid black; /*borda so para fins de visualizacao, dps retirar*/
+}
+
 .cont-itens {
     position: relative;
     display: flex;
-    height: 400px;
-    width: 450px;
+    height: 70%;
+    width: 100px;
     border: 2px solid red;
-    flex-direction:column;
+    flex-direction: column;
     margin: 5px;
     float: left;
     
 }
+
 .imgItens {
     position: relative;
     display: flex;
@@ -135,14 +145,17 @@
 #cont-int-contato {
     position: relative;
     background-color: green;
-    height: 500px;
+    height: 350px;
     margin: 10px;
-    padding: 5px;
+    padding: 20px;
     border-radius: 10px;
 }
 
 #form_contatos {
+    font-family: sans-serif;
+    font-size: 13pt;
     position: relative;
+    float: left;
     width: 500px;
     margin: auto;
 }
@@ -162,5 +175,15 @@ label, legend {
 
 input:hover, textarea:hover {
     background-color: #dddddd;
+}
+
+#fieldset_aval {
+    float: left;
+    width: 250px;
+}
+
+#submitbutton {
+    position: relative;
+    bottom: 0;
 }
 
