--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,10 @@
     border: 2px solid red;
 }
 
+h1 {
+    font-family: sans-serif;
+}
+
 .cont-externo {
     position: relative;
     height: 600px;
@@ -201,3 +205,32 @@ input:hover, textarea:hover {
     bottom: 0;
 }
 
+#cont-ext-reservas {
+    background-color: green;
+    height: 400px;
+    border-radius: 10px;
+    padding: 20px;
+    margin-bottom: 1%;
+    
+}
+
+#reserv-form {
+    float: left;
+    margin: 20px;
+    margin-top: 50px;
+    margin-left: 8%;
+    /*border: 2px solid black;*/
+}
+
+.img-reserva {    
+    position: relative;
+    height: 80%;
+    margin: 20px;
+    margin-left: 15%;
+}
+
+#submit-reservas {
+    position: relative;
+    margin: 5%;
+    margin-top: 10%;
+}
