--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,10 @@
 
 }
 
+h1 {
+    font-family: sans-serif;
+}
+
 .topo {
     position: fixed;
     width: 80%;
@@ -133,13 +137,6 @@
 .voltar {
    float: right;
 
-}
-
-#contato {
-    position: relative;
-    width: 100%;
-    margin: 10px;
-    padding: 5px;
 }
 
 #cont-int-contato {
