--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,9 @@ body{
 
 .site {
     position: absolute;
-    width: 90%;
+    width: 100%;
+
+
 
 }
 
@@ -21,13 +23,12 @@ body{
     background: linear-gradient(rgba(250,185,0,255), rgba(241,155,0,255), rgba(248,178,0,255)) ;
     position: -webkit-sticky;
     position: fixed;
-    top: 0;
+    top: 0;   
     padding: 5px;
     width: 100%;
-    height: 12rem;
-    /* border: 2px solid black; */
-    z-index: 1;
+    height: 12rem;    z-index: 1;
     justify-content: center;
+    margin: 0 auto;
 
     
 }
@@ -40,13 +41,19 @@ body{
     height: 10rem;
     margin: auto;
     display: block;
-
 }
 
 .menu {
     position: absolute;
+    display: flex;
     bottom: 0.5rem;
-    display: inline;
+    display: inline-block;
+}
+
+@media (max-width: 768px) {
+    .menu {
+      grid-template-columns: repeat(2, 1fr);
+    }
 }
 
 .menu a {
@@ -55,7 +62,7 @@ body{
     text-decoration: none;
     font-weight: bold;
     font-size: 1.5rem;
-    background-color:rgba(219, 79, 36, 0.74) ;
+    /* background-color:rgba(219, 79, 36, 0.74) ; */
     padding-left: 6px;
     padding-right: 6px;
     margin-left: 2px;
@@ -63,23 +70,22 @@ body{
     text-align: center;
     }
 
-.menu a:hover {
-    background-color:rgba(255, 1, 1, 0.534) ;
-    color: white;
-    
+.mtopo:hover {
+    color: #ffffff;
 }    
-
-
 
 .cont-externo {
     position: relative;
-    height: 600px;
-    width: 100%;
+    width: 80%;
+    margin: 0 auto;
     top: 10rem;
     background-color: white;
     padding: 20px;
+    max-width: 1440px;
 
 }
+
+
 
 .cont-int {
     position: relative;
@@ -131,39 +137,41 @@ body{
     margin: 5px;
 }
 
-#cardapio {
-
-
-}
+/* Começa o cardapio */
 
 .itens-sec {
     position: relative;
-    display: block;
-    flex-direction: row;
-    width: 100%;
-    height: 200px;
-    border: 2px solid black; /*borda so para fins de visualizacao, dps retirar*/
+    display: flex;
+    flex-wrap: wrap;
+    background-color: rgba(250,185,0,255);
+    border-radius: 10px;
+    margin: 5px;
+    align-items: center;
+    justify-content: center;
+    max-height: fit-content;
 }
 
 .cont-itens {
     position: relative;
     display: flex;
-    height: 70%;
-    width: 100px;
-    border: 2px solid red;
     flex-direction: column;
-    margin: 5px;
-    float: left;
-    
+    margin: 1rem;
+
 }
 
 .imgItens {
     position: relative;
     display: flex;
-    height: 80%;
-    width: 80%;
-    border: 2px solid red;
-    margin: 5%;
+    aspect-ratio: 4 / 3;
+    /* height: 80%; */
+    width: 10rem;
+    /* border: 2px solid red; */
+    margin: 1rem;
+    border-radius: 45%;
+}
+
+.aspct {
+    aspect-ratio: auto;
 }
 
 .descItens {
@@ -171,8 +179,14 @@ body{
     display: flex;
     height: 20%;
     width: 80%;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     margin: 5%;
+    justify-content: center;
+    font-size: 1.5rem;
+}
+
+.imgItens:hover, .descItens:hover {
+    transform: scale(1.2);
 }
 
 .voltar {
