--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,8 @@ body{
     top: 0;   
     padding: 5px;
     width: 100%;
-    height: 12rem;    z-index: 1;
+    height: 12rem;    
+    z-index: 1;
     justify-content: center;
     margin: 0 auto;
 
@@ -35,12 +36,10 @@ body{
 
 .itopo {
     position: absolute;
-    top: 2px;
     aspect-ratio: 28 / 9;
-    /* width: 80%; */
     height: 10rem;
     margin: auto;
-    display: block;
+
 }
 
 .menu {
@@ -62,7 +61,6 @@ body{
     text-decoration: none;
     font-weight: bold;
     font-size: 1.5rem;
-    /* background-color:rgba(219, 79, 36, 0.74) ; */
     padding-left: 6px;
     padding-right: 6px;
     margin-left: 2px;
@@ -82,59 +80,29 @@ body{
     background-color: white;
     padding: 20px;
     max-width: 1440px;
-
 }
 
 
 
 .cont-int {
     position: relative;
+    display: flex;
     background-color: rgba(250,185,0,255);
-    height: 130px;
+    /* height: 130px; */
     margin: 10px;
     padding: 5px;
     border-radius: 10px;
+    justify-content: center;
+    align-items: center;
 
 }
 
-.isobre-dir {
-    position: relative;
-    display: flex;
-    height: 120px;
-    width: 20%;
-    border: 2px solid red;
-    float: right;
-    margin: 5px;
-}
 
-.cont-texto-esq {
-    position: relative;
-    display: flex;
-    float: left;
-    height: 120px;
-    width: 70%;
-    border: 2px solid red;
-    margin: 5px;
-}
-
-.isobre-esq {
-    position: relative;
-    display: flex;
-    height: 120px;
-    width: 20%;
-    border: 2px solid red;
-    float: left;
-    margin: 5px;
-}
-
-.cont-texto-dir {
-    position: relative;
-    display: flex;
-    float: right;
-    height: 120px;
-    width: 70%;
-    border: 2px solid red;
-    margin: 5px;
+p {
+    max-width: 30rem;
+    overflow:hidden;
+    text-overflow:clip;
+    white-space:pre-wrap;
 }
 
 /* Começa o cardapio */
@@ -156,16 +124,13 @@ body{
     display: flex;
     flex-direction: column;
     margin: 1rem;
-
 }
 
-.imgItens {
+.img {
     position: relative;
     display: flex;
     aspect-ratio: 4 / 3;
-    /* height: 80%; */
     width: 10rem;
-    /* border: 2px solid red; */
     margin: 1rem;
     border-radius: 45%;
 }
