--- a/css/styles.css
+++ b/css/styles.css
@@ -87,14 +87,29 @@ body{
 .cont-int {
     position: relative;
     display: flex;
+    flex-wrap: wrap;
     background-color: rgba(250,185,0,255);
-    /* height: 130px; */
+    border-radius: 10px;
+    margin: 5px;
+    align-items: center;
+    justify-content: center;
+    max-height: fit-content;
+    /* position: relative;
+    display: flex;
+    background-color: rgba(250,185,0,255);
     margin: 10px;
     padding: 5px;
     border-radius: 10px;
     justify-content: center;
     align-items: center;
+ */
+}
 
+.textoSobre {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    margin: 1rem;
 }
 
 
@@ -142,10 +157,6 @@ p {
 .descItens {
     position: relative;
     display: flex;
-    height: 20%;
-    width: 80%;
-    /* border: 2px solid red; */
-    margin: 5%;
     justify-content: center;
     font-size: 1.5rem;
 }
@@ -156,7 +167,10 @@ p {
 
 .voltar {
    float: right;
-
+   border: 2px solid black;
+   background-color: #ffffff;
+   border-radius: 2rem;
+   margin: 0.5rem;
 }
 
 #contato {
