--- a/css/styles.css
+++ b/css/styles.css
@@ -1,128 +1,365 @@
-*{
-    margin:0 auto;
-    
+@import url('https://fonts.googleapis.com/css2?family=Concert+One&display=swap');
+
+html {
+    scroll-behavior: smooth;
+}
+
+body{
+    background-color: rgba(128, 128, 128, 0.461);
+    font-family: 'Concert One', cursive;
 
 }
 
 .site {
-    position: relative;
-    width: 80%;
+    position: absolute;
+    width: 100%;
+
+
 
 }
 
-.topo{
+.topo {
+    display: flex;
+    background: linear-gradient(rgba(250,185,0,255), rgba(241,155,0,255), rgba(248,178,0,255)) ;
+    position: -webkit-sticky;
     position: fixed;
-    width: 80%;
-    height: 25%;
-    border: 2px solid black;
+    top: 0;   
+    padding: 5px;
+    width: 100%;
+    height: 12rem;    
     z-index: 1;
+    justify-content: center;
+    margin: 0 auto;
+
     
 }
 
-.itopo{
-    position: relative;
-    height: 130px;
-    width: 100%;
-    border: 2px solid red;
+.itopo {
+    position: absolute;
+    aspect-ratio: 28 / 9;
+    height: 10rem;
+    margin: auto;
+
 }
+
+.menu {
+    position: absolute;
+    display: flex;
+    bottom: 0.5rem;
+    display: inline-block;
+}
+
+@media (max-width: 768px) {
+    .menu {
+      grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+.menu a {
+    color:black;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 1.5rem;
+    padding-left: 6px;
+    padding-right: 6px;
+    margin-left: 2px;
+    margin-right: 2px;
+    text-align: center;
+    }
+
+.mtopo:hover {
+    color: #ffffff;
+}    
 
 .cont-externo {
     position: relative;
-    height: 600px;
-    width: 100%;
-    top: 170px;
-    background-color: purple;
+    width: 80%;
+    margin: 0 auto;
+    top: 10rem;
+    background-color: white;
     padding: 20px;
-
+    max-width: 1440px;
 }
 
-.cont-int{
+
+
+.cont-int {
     position: relative;
-    background-color: green;
-    height: 130px;
+    display: flex;
+    flex-wrap: wrap;
+    background-color: rgba(250,185,0,255);
+    border-radius: 10px;
+    margin: 5px;
+    align-items: center;
+    justify-content: center;
+    max-height: fit-content;
+    /* position: relative;
+    display: flex;
+    background-color: rgba(250,185,0,255);
     margin: 10px;
     padding: 5px;
     border-radius: 10px;
-
+    justify-content: center;
+    align-items: center;
+ */
 }
 
-.isobre-dir {
+.textoSobre {
     position: relative;
     display: flex;
-    height: 120px;
-    width: 20%;
-    border: 2px solid red;
-    float: right;
-    margin: 5px;
+    flex-direction: column;
+    margin: 1rem;
 }
 
-.cont-texto-esq {
+
+p {
+    max-width: 30rem;
+    overflow:hidden;
+    text-overflow:clip;
+    white-space:pre-wrap;
+}
+
+/* Começa o cardapio */
+
+.itens-sec {
     position: relative;
     display: flex;
-    float: left;
-    height: 120px;
-    width: 70%;
-    border: 2px solid red;
+    flex-wrap: wrap;
+    background-color: rgba(250,185,0,255);
+    border-radius: 10px;
     margin: 5px;
+    align-items: center;
+    justify-content: center;
+    max-height: fit-content;
 }
 
-.isobre-esq {
+.cont-itens {
     position: relative;
     display: flex;
-    height: 120px;
-    width: 20%;
-    border: 2px solid red;
-    float: left;
-    margin: 5px;
-}
-
-.cont-texto-dir {
-    position: relative;
-    display: flex;
-    float: right;
-    height: 120px;
-    width: 70%;
-    border: 2px solid red;
-    margin: 5px;
-}
-
-#cardapio {
-
-
-}
-
-.cont-itens{
-    position: relative;
-    display: flex;
-    height: 400px;
-    width: 450px;
-    border: 2px solid red;
-    flex-direction:column;
-    margin: 5px;
-    float: left;
+    flex-direction: column;
+    margin: 1rem;
     
 }
+.cont-itens2 {
+    position: relative;
+    display: flex;
+    margin-left: 0%;
+    flex-direction: column;
+    margin-left: 5px;
+    width: 29%;
+    
+}
+
 .imgItens {
     position: relative;
     display: flex;
-    height: 80%;
-    width: 80%;
-    border: 2px solid red;
-    margin: 5%;
+    aspect-ratio: 4 / 3;
+    width: 10rem;
+    margin: 1rem;
+    border-radius: 45%;
 }
 
+.aspct {
+    aspect-ratio: auto;
+}
+/* Começa informações */
+.info-sec {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    background-color: rgba(250,185,0,255);
+    border-radius: 10px;
+    margin: 5px;
+    align-items: center;
+    justify-content: center;
+    max-height: fit-content;
+}
+.imgItensifood {
+    position: relative;
+    display: flex;
+    width: 10rem;
+    margin: 1rem;
+}
+.imgItensze {
+    position: relative;
+    display: flex;
+    width: 10rem;
+    margin: 1rem;
+    aspect-ratio: 4 / 3;
+}
+.imgItensmoto{
+    position: relative;
+    display: flex;
+    width: 10rem;
+    margin: 1rem;
+    aspect-ratio: 4 / 3;
+}
+.descItensinfo {
+    position: relative;
+    display: flex;
+    justify-content:left;
+    font-size: 1.5rem;
+}
+.imgItens1 {
+    position: relative;
+    display: flex;
+    margin: 1rem;
+}
+/*seção informaçoes fim*/
 .descItens {
     position: relative;
     display: flex;
-    height: 20%;
-    width: 80%;
-    border: 2px solid red;
-    margin: 5%;
+    justify-content: center;
+    font-size: 1.5rem;
+}
+
+.imgItens:hover, .descItens:hover {
+    transform: scale(1.2);
 }
 
 .voltar {
    float: right;
-
+   border: 2px solid black;
+   background-color: #ffffff;
+   border-radius: 2rem;
+   margin: 0.5rem;
 }
 
+#contato {
+    position: relative;
+    width: 100%;
+}
 
+/*
+#cont-int-contato {
+    position: relative;
+    background-color: rgba(250,185,0,255);
+    height: 350px;
+    margin: 10px;
+    padding: 10px;
+    padding-left: 100px;
+    border-radius: 10px;
+}
+*/
+
+#form_contatos {
+    font-family: 'Concert One', cursive;
+    font-size: 13pt;
+    position: relative;
+    float: left;
+    width: 500px;
+    margin-left: 100px;
+}
+
+#cont-form {
+    float: left;
+}
+
+.img-contato {
+    position: relative;
+    height: 60%;
+    margin-top: 5%;
+}
+
+input, textarea {
+    font-family: 'Concert One', cursive;
+    font-weight: normal;
+    font-size: 13pt;
+    margin: 10px;
+}
+
+label, legend {    
+    font-family: 'Concert One', cursive;
+    font-weight: normal;
+    font-size: 13pt;
+}
+
+input:hover, textarea:hover {
+    background-color: #dddddd;
+}
+
+#fieldset_aval {
+    float: left;
+    width: 250px;
+}
+
+#submitbutton {
+    position: relative;
+    align-self: center;
+    margin: 5%;
+    margin-left: 10%;
+    bottom: 0;
+}
+
+#cont-ext-reservas {    
+    background-color: rgba(250,185,0,255);
+    height: 400px;
+    border-radius: 10px;
+    padding: 10px;
+    padding-left: 10%;
+    margin-bottom: 1%;
+    
+}
+
+#reserv-form {
+    float: left;
+    margin: 20px;
+    margin-top: 5px;
+    margin-left: 8%;
+    /*border: 2px solid black;*/
+}
+
+.img-reserva {    
+    position: relative;
+    height: 80%;
+    margin: 50px;
+    margin-left: 15%;
+}
+
+#submit-reservas {
+    position: relative;
+    margin: 5%;
+    margin-top: 5%;
+}
+
+/*
+.cont-externo-contato {
+    position: relative;
+    height: 600px;
+    width: 100%;
+    top: 170px;
+    background-color: rgba(250,185,0,255);
+    padding: 20px;
+}
+*/
+
+#cont-int-contato {
+    position: relative;
+    background-color: rgba(250,185,0,255);
+    height: 400px;
+    margin: 10px;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+#cont-ext-contato {    
+    background-color: rgba(250,185,0,255);
+    height: 400px;
+    border-radius: 10px;
+    padding: 10px;
+    padding-left: 10%;
+    margin-bottom: 1%;
+    
+}
+
+#cont-form {
+    float: left;
+}
+
+.img-contato {
+    position: relative;
+    height: 50%;
+    margin-top: 8%;
+    filter: invert(100%);
+}
