--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,15 @@ body{
 
 }
 
+.mascote {
+    position: absolute;
+    top: 45%;
+    height: 10rem;
+    right: 250px;
+    
+    border-radius: 50%;
+}
+
 .menu {
     position: absolute;
     display: flex;
@@ -70,7 +79,9 @@ body{
 
 .mtopo:hover {
     color: #ffffff;
-}    
+}
+
+
 
 .cont-externo {
     position: relative;
