--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Concert+One&display=swap');
 
-@import url('/css/reset.css');
-@import url('/css/header.css');
-@import url('/css/sobre.css');
-@import url('/css/cardapio.css');
-@import url('/css/informacoes.css');
-@import url('/css/contato.css');
-@import url('/css/footer.css');
+@import url('css/reset.css');
+@import url('css/header.css');
+@import url('css/sobre.css');
+@import url('css/cardapio.css');
+@import url('css/informacoes.css');
+@import url('css/contato.css');
+@import url('css/footer.css');
 
 html {
     scroll-behavior: smooth;
