--- a/styles.css
+++ b/styles.css
@@ -42,3 +42,9 @@ ul {
    border-radius: 2rem;
    margin: 0.5rem;
 }
+
+.voltar:hover {
+    background-color: #000000;
+    color: #ffffff;
+    cursor: pointer;
+}
