--- a/css/cardapio.css
+++ b/css/cardapio.css
@@ -24,11 +24,20 @@
     aspect-ratio: 4 / 3;
     width: 10rem;
     margin: 1rem;
-    border-radius: 45%;
+    
 }
 
 .aspct {
     aspect-ratio: auto;
+}
+
+.scale {
+    transform: scale(1.4);
+    cursor: none;
+}
+
+.imgRadius {
+    border-radius: 45%;
 }
 
 .descItens {
@@ -38,6 +47,7 @@
     font-size: 1.5rem;
 }
 
-.imgItens:hover, .descItens:hover {
+.imgRadius:hover, .descItens:hover {
     transform: scale(1.2);
+    cursor: none;
 }
