--- a/css/contato.css
+++ b/css/contato.css
@@ -11,8 +11,8 @@ input:hover, textarea:hover {
     margin: 0.5rem 0; 
     border: 1px solid black;
     border-radius: 0.5rem;
+    font-size: 1rem;
 }
-
 
 .img-reserva {    
     position: relative;
@@ -33,8 +33,7 @@ input:hover, textarea:hover {
     display: flex;
     flex-direction: column;
     align-items: stretch;
-    margin: 1.5rem;
-    
+    margin: 1.5rem;   
 }
 
 .formulario .submit {
