alterações no cardapio
- adicionei links para as ids
- troquei a função js para adicionar e remover classes
- organizei as classes do cardapio

--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,11 @@ ul {
     list-style: none;
 }
 
+a {
+    text-decoration: none;
+    color: #000000;
+}
+
 .voltar {
    float: right;
    border: 2px solid black;
