--- a/css/footer.css
+++ b/css/footer.css
@@ -3,7 +3,7 @@ hr {
 }
 
 .rodape {
-    background-color: var(--branco);
+    background-color: #ffffff;
     padding: 1rem;
     display: flex;
     justify-content: space-around;
